[package]
name = "hv-sys"
version = "0.1.0"
edition = "2018"
description = "Unsafe bindings for Hypervisor Framework generated with bindgen"
authors = ["Maksym Pavlenko <pavlenko.maksym@gmail.com>"]
repository = "https://github.com/mxpv/hv"
license = "Apache-2.0"
readme = "README.md"
keywords = ["hypervisor", "virtualization", "microvm", "macos", "apple"]
categories = ["os::macos-apis", "api-bindings", "hardware-support"]

[build-dependencies]
bindgen = "0.58"

[package.metadata.docs.rs]
targets = ["x86_64-apple-darwin", "aarch64-apple-darwin"]
