[package]
name = "hv"
version = "0.1.0"
edition = "2018"
description = "High level Rust bidings to Hypervisor Framework"
authors = ["Maksym Pavlenko <pavlenko.maksym@gmail.com>"]
repository = "https://github.com/mxpv/hv"
license-file = "../LICENSE"
readme = "../README.md"

[dependencies]
bitflags = "1.2"
hv-sys = { path = "../hv-sys", version = "0.1.0" }

[dev-dependencies]
libc = "0.2"

[features]
hv_10_15 = []
default = ["hv_10_15"]
